[CSS] Fix some settings forms vertical alignment

--- a/client/css/sections/settings/all.css
+++ b/client/css/sections/settings/all.css
@@ -16,6 +16,7 @@
     width: 33.33%;
     flex-shrink: 0;
     margin-right: 1em;
+    align-self: center;
 }
 
 @media (max-width: 768px) {
